--- a/bys/dangolchallenge.html
+++ b/bys/dangolchallenge.html
@@ -42,11 +42,7 @@
       });
     </script>
     <!-- 슬라이더 -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
-    />
+    <link rel="stylesheet" type="text/css" href="css/slick.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script
       type="text/javascript"
@@ -443,35 +439,35 @@
                 <div>
                   <div class="ys_img_box">
                     <img src="./img/sell_story_1.png" alt="" />
-                    <div class="ys_box_text box1">
+                    <!-- <div class="ys_box_text box1">
                       <div class="ys_sub_slide">
                         카카오 싱크로 쇼핑몰과 채널을 연동해 <br />
                         고객의 원활한 쇼핑을 도울 수 있어요!
                       </div>
                       <div class="ys_sub_tit">대구 [뚜누]</div>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
 
                 <div>
                   <img src="./img/sell_story_2.png" alt="" />
-                  <div class="ys_box_text box2">
+                  <!-- <div class="ys_box_text box2">
                     <div class="ys_sub_slide">
                       채널로 고객에게 쿠폰을 발송하니 <br />
                       단골이 생기고 매출이 늘었어요!
                     </div>
                     <div class="ys_sub_tit">구리 [가드니아 제빵소]</div>
-                  </div>
+                  </div> -->
                 </div>
                 <div>
                   <div><img src="./img/sell_story_3.png" alt="" /></div>
-                  <div class="ys_box_text box3">
+                  <!-- <div class="ys_box_text box3">
                     <div class="ys_sub_slide">
                       축제 정보를 채널 홈에 알려 <br />
                       사람들을 시장으로 방문하도록 했어요!
                     </div>
                     <div class="ys_sub_tit">경산 [하양꿈바우시장]</div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
