--- a/bys/dangolchallenge.html
+++ b/bys/dangolchallenge.html
@@ -214,12 +214,12 @@
               <div class="wrap_btn step1_btn">
                 <a href=""
                   ><div class="btn_dangol type_small">
-                    가입하기<img src="./img/diagonaArrow.PNG" alt="" /></div
+                    가입하기<img src="./img/diagonaArrow.png" alt="" /></div
                 ></a>
                 <a href=""
                   ><div class="btn_dangol type_small">
                     채널 개설하기
-                    <img src="./img/diagonaArrow.PNG" alt="" /></div
+                    <img src="./img/diagonaArrow.png" alt="" /></div
                 ></a>
               </div>
             </div>
